# rctf-scenario4

./: Dockerfile  README.md  launch_script.bash  motd
ariac_utils/: CMakeLists.txt  package.xml
ariac_utils/include/: ARIAC.hh  ConveyorBeltPlugin.hh  ROSConveyorBeltPlugin.hh  ROSLogicalCameraPlugin.hh
ariac_utils/src/: ConveyorBeltPlugin.cc  ROSConveyorBeltPlugin.cc  ROSLogicalCameraPlugin.cc
scenario4-local/: CMakeLists.txt  package.xml
scenario4-local/launch/: robotctf_scenario4.launch
scenario4-local/models/logical_camera/: model.sdf  model.urdf
scenario4-local/models/person_standing/: model.sdf  model.urdf
scenario4-local/models/person_standing/meshes/: untitled.stl
scenario4-local/models/table_small/: model.config  model.sdf
scenario4-local/models/ur_description/: model.config
scenario4-local/models/ur_description/material/: gazebo.material
scenario4-local/models/ur_description/meshes/ur10/visual/: forearm.dae  shoulder.dae  upperarm.dae  wrist1.dae  wrist2.dae  wrist3.dae
scenario4-local/models/ur_description/meshes/ur3/visual/: bin2.dae
scenario4-local/models/ur_description/meshes/ur5/visual/: belt.dae  bin.dae  bin3.dae  cube.dae
scenario4-local/models/workcell_bin/meshes/: bin.stl  bin2.dae
scenario4-local/scripts/: move_arm.py
scenario4-local/src/: detect_movement.cpp
scenario4-local/urdf/: robot_description.urdf.xacro  robot_description_original.urdf.xacro  table_small.urdf  ur10.urdf.xacro  workcell_bin.urdf
scenario4-local/world/: robotctf_scenario4.world
