<?xml version="1.0"?>
<package format="2">
  <name>robotctf_scenario4</name>
  <version>0.1.0</version>
  <description>
    Robotctf scenario 4
  </description>

  <author email="gorka@aliasrobotics.com">Gorka Olalde</author>
  <author email="lander@aliasrobotics.com">Lander Usategui</author>

  <author>Lander Usategui and Gorka Olalde</author>
  <maintainer email="gorka@aliasrobotics.com">Gorka Olalde</maintainer>

  <license>Apache 2.0</license>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>